# LuaSourceCodeNote

./: .gitignore  CMakeLists.txt  Readme.md
LuaScripts/: Main.lua
lua-5.1.4/note/: 5.1.4-虚拟机.md  5.1.4-表.md  5.1.4-通用数据结构.md  Readme-5.1.4.md
lua-5.1.4/src/: lobject.h  lstate.h  lstring.c  ltable.c
lua-5.4.3/gen-5.4.3/: gen-5.4.3.sln
lua-5.4.3/gen-5.4.3/Lua-5.4.3/: Lua-5.4.3.vcxproj  Lua-5.4.3.vcxproj.filters
lua-5.4.3/gen-5.4.3/Lua-5.4.3/Debug/: Lua-5.4.3.exe.recipe
lua-5.4.3/gen-5.4.3/Lua-5.4.3/Debug/Lua-5.4.3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lua-5.4.3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lua-5.4.3/gen-5.4.3/LuaDll-5.4.3/: LuaDll-5.4.3.vcxproj  LuaDll-5.4.3.vcxproj.filters
lua-5.4.3/gen-5.4.3/LuaDll-5.4.3/Debug/: LuaDll-5.4.3.dll.recipe
lua-5.4.3/gen-5.4.3/LuaDll-5.4.3/Debug/LuaDll-5.4.3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lua-5.4.3/gen-5.4.3/Luac-5.4.3/: Luac-5.4.3.vcxproj  Luac-5.4.3.vcxproj.filters
lua-5.4.3/gen-5.4.3/Luac-5.4.3/Debug/: Luac-5.4.3.exe.recipe
lua-5.4.3/gen-5.4.3/Luac-5.4.3/Debug/Luac-5.4.3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lua-5.4.3/note/: lstring.md
lua-5.4.3/src/: lobject.h  lstring.c  lua.h
