cmake_minimum_required(VERSION 3.19)
project(LuaSourceCodeNote)

set(CMAKE_CXX_STANDARD 14)

include_directories(lua-5.4.3/src)

add_executable(LuaSourceCodeNote
        lua-5.4.3/src/lapi.c
        lua-5.4.3/src/lapi.h
        lua-5.4.3/src/lauxlib.c
        lua-5.4.3/src/lauxlib.h
        lua-5.4.3/src/lbaselib.c
        lua-5.4.3/src/lcode.c
        lua-5.4.3/src/lcode.h
        lua-5.4.3/src/lcorolib.c
        lua-5.4.3/src/lctype.c
        lua-5.4.3/src/lctype.h
        lua-5.4.3/src/ldblib.c
        lua-5.4.3/src/ldebug.c
        lua-5.4.3/src/ldebug.h
        lua-5.4.3/src/ldo.c
        lua-5.4.3/src/ldo.h
        lua-5.4.3/src/ldump.c
        lua-5.4.3/src/lfunc.c
        lua-5.4.3/src/lfunc.h
        lua-5.4.3/src/lgc.c
        lua-5.4.3/src/lgc.h
        lua-5.4.3/src/linit.c
        lua-5.4.3/src/liolib.c
        lua-5.4.3/src/ljumptab.h
        lua-5.4.3/src/llex.c
        lua-5.4.3/src/llex.h
        lua-5.4.3/src/llimits.h
        lua-5.4.3/src/lmathlib.c
        lua-5.4.3/src/lmem.c
        lua-5.4.3/src/lmem.h
        lua-5.4.3/src/loadlib.c
        lua-5.4.3/src/lobject.c
        lua-5.4.3/src/lobject.h
        lua-5.4.3/src/lopcodes.c
        lua-5.4.3/src/lopcodes.h
        lua-5.4.3/src/lopnames.h
        lua-5.4.3/src/loslib.c
        lua-5.4.3/src/lparser.c
        lua-5.4.3/src/lparser.h
        lua-5.4.3/src/lprefix.h
        lua-5.4.3/src/lstate.c
        lua-5.4.3/src/lstate.h
        lua-5.4.3/src/lstring.c
        lua-5.4.3/src/lstring.h
        lua-5.4.3/src/lstrlib.c
        lua-5.4.3/src/ltable.c
        lua-5.4.3/src/ltable.h
        lua-5.4.3/src/ltablib.c
        lua-5.4.3/src/ltm.c
        lua-5.4.3/src/ltm.h
        lua-5.4.3/src/lua.c
        lua-5.4.3/src/lua.h
        lua-5.4.3/src/lua.hpp
        lua-5.4.3/src/luac.c
        lua-5.4.3/src/luaconf.h
        lua-5.4.3/src/lualib.h
        lua-5.4.3/src/lundump.c
        lua-5.4.3/src/lundump.h
        lua-5.4.3/src/lutf8lib.c
        lua-5.4.3/src/lvm.c
        lua-5.4.3/src/lvm.h
        lua-5.4.3/src/lzio.c
        lua-5.4.3/src/lzio.h
        lua-5.4.3/Makefile)
